--- a/IEEE Paper/bare_conf_compsoc.tex
+++ b/IEEE Paper/bare_conf_compsoc.tex
@@ -300,27 +300,15 @@
 % The latest version can be found at:
 % http://www.ctan.org/pkg/dblfloatfix
 
-
-
-
-% *** PDF, URL AND HYPERLINK PACKAGES ***
-%
-%\usepackage{url}
-% url.sty was written by Donald Arseneau. It provides better support for
-% handling and breaking URLs. url.sty is already installed on most LaTeX
-% systems. The latest version and documentation can be obtained at:
-% http://www.ctan.org/pkg/url
-% Basically, \url{my_url_here}.
-
-
-
-
-% *** Do not adjust lengths that control margins, column widths, etc. ***
-% *** Do not use packages that alter fonts (such as pslatex).         ***
-% There should be no need to do such things with IEEEtran.cls V1.6 and later.
-% (Unless specifically asked to do so by the journal or conference you plan
-% to submit to, of course. )
-
+\usepackage{graphicx}
+\usepackage{array}
+\usepackage{caption}
+\usepackage{placeins}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\providecommand{\keywords}[1]{\textbf{\textit{Keywords---}} #1}
+\providecommand{\abstractCustom}[1]{\textbf{\textit{Abstract---}} #1}
 
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
@@ -334,28 +322,17 @@
 % not capitalized unless they are the first or last word of the title.
 % Linebreaks \\ can be used within to get better formatting as desired.
 % Do not put math or special symbols in the title.
-\title{Bare Demo of IEEEtran.cls for\\ IEEE Computer Society Conferences}
+\title{Cardiovascular Health Prediction with Bayesian Network}
 
 
 % author names and affiliations
 % use a multiple column layout for up to three different
 % affiliations
-\author{\IEEEauthorblockN{Michael Shell}
-\IEEEauthorblockA{School of Electrical and\\Computer Engineering\\
-Georgia Institute of Technology\\
-Atlanta, Georgia 30332--0250\\
-Email: http://www.michaelshell.org/contact.html}
-\and
-\IEEEauthorblockN{Homer Simpson}
-\IEEEauthorblockA{Twentieth Century Fox\\
-Springfield, USA\\
-Email: homer@thesimpsons.com}
-\and
-\IEEEauthorblockN{James Kirk\\ and Montgomery Scott}
-\IEEEauthorblockA{Starfleet Academy\\
-San Francisco, California 96678-2391\\
-Telephone: (800) 555--1212\\
-Fax: (888) 555--1212}}
+\author{\IEEEauthorblockN{Phillip Osial \hspace{5mm} Kalle Kauranen}
+\IEEEauthorblockA{Department of Computer Science\\
+Lakehead University\\
+Thunder Bay, Ontario, Canada\\
+\{pgosial, kakauran\}@lakeheadu.ca}}
 
 % conference papers do not typically use \thanks and this command
 % is locked out in conference mode. If really needed, such as for
@@ -395,13 +372,11 @@ Fax: (888) 555--1212}}
 
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
-\begin{abstract}
-The abstract goes here.
-\end{abstract}
 
+\abstractCustom{In Canadian society, the ubiquity of heart disease has lead to it becoming the second leading cause of death for Canadians. In this paper, we look at creating a clinical decision making process to identify the risk factors associated with a diagnoses of heart disease. With this research we may be able to increase the }
 % no keywords
 
-
+\keywords{Cardiovascular, Health, Heart, Disease, Canada}
 
 
 % For peer review papers, you can put extra information on the cover
@@ -414,128 +389,29 @@ The abstract goes here.
 % creates the second title. It will be ignored for other modes.
 \IEEEpeerreviewmaketitle
 
-
-
 \section{Introduction}
-% no \IEEEPARstart
-This demo file is intended to serve as a ``starter file''
-for IEEE Computer Society conference papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8b and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
+Cardiovascular disease (CVD) is category of diseases involving the heart and blood vessels that is now the second leading cause of death in Canada. As a result of its increasing prevalence, large amounts of research is being conducted to try and bring down the instances of death and increase the health of Canadians from coast-to-coast.    To accomplish our analysis we will create a Bayesian network to model our clinical decision making process. Following that we will evaluate our decision making process using a receiver operating characteristic (ROC) curve and determining the area under the curve (AUC).  
 
-\hfill mds
- 
-\hfill August 26, 2015
+\section{Research Motivation}
+Nowadays there is a large focus in research in what is called Big Data Analytics (BDA). BDA is the process of analysing large amounts of data to find hidden patterns and meaning within. Examples of where BDA is making large improvements are the pharmaceutical industry where BDA is allowing researchers to focus on the medications that will be most likely to succeed and in the cases of disease and viral outbreaks where BDA is mapping out the genetic components that are able to stop the diseases from spreading. Our end goal for this research also focuses on the health industry but looks at creating a process for predicting cardiovascular disease in order to hopefully prevent it in the overall Canadian population. An example applicable to our domain follows:
+A person goes for a checkup at their family physician. At the checkup they are given a survey to fill out and are run through the usual set of tests. The results from the survey and the tests are then run through the clinical decision making process to determine problem areas of the invidual that put them at risk for CVD. Using the results, the individual can take that knowledge and change his lifestyle habits to decrease his likelyhood of CVD.
+This one example shows a possible usage for the research that will be gained here.
 
-\subsection{Subsection Heading Here}
-Subsection text here.
+\section{Related Works}
+Research in cardiovascular health has steadily increased over the years as it has become more common in the healthcare fields. Advancements and usage of big data analytics has improved the methods and variety of research that can be conducted on the existing datasets\cite{Nobody06}. 
 
+\section{Data Description}
 
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
+\section{Methodology}
 
+\section{Validation and Evaluation}
 
-% An example of a floating figure using the graphicx package.
-% Note that \label must occur AFTER (or within) \caption.
-% For figures, \caption should occur after the \includegraphics.
-% Note that IEEEtran v1.7 and later has special internal code that
-% is designed to preserve the operation of \label within \caption
-% even when the captionsoff option is in effect. However, because
-% of issues like this, it may be the safest practice to put all your
-% \label just after \caption rather than within \caption{}.
-%
-% Reminder: the "draftcls" or "draftclsnofoot", not "draft", class
-% option should be used if it is desired that the figures are to be
-% displayed while in draft mode.
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=2.5in]{myfigure}
-% where an .eps filename suffix will be assumed under latex, 
-% and a .pdf suffix will be assumed for pdflatex; or what has been declared
-% via \DeclareGraphicsExtensions.
-%\caption{Simulation results for the network.}
-%\label{fig_sim}
-%\end{figure}
-
-% Note that the IEEE typically puts floats only at the top, even when this
-% results in a large percentage of a column being occupied by floats.
-
-
-% An example of a double column floating figure using two subfigures.
-% (The subfig.sty package must be loaded for this to work.)
-% The subfigure \label commands are set within each subfloat command,
-% and the \label for the overall figure must come after \caption.
-% \hfil is used as a separator to get equal spacing.
-% Watch out that the combined width of all the subfigures on a 
-% line do not exceed the text width or a line break will occur.
-%
-%\begin{figure*}[!t]
-%\centering
-%\subfloat[Case I]{\includegraphics[width=2.5in]{box}%
-%\label{fig_first_case}}
-%\hfil
-%\subfloat[Case II]{\includegraphics[width=2.5in]{box}%
-%\label{fig_second_case}}
-%\caption{Simulation results for the network.}
-%\label{fig_sim}
-%\end{figure*}
-%
-% Note that often IEEE papers with subfigures do not employ subfigure
-% captions (using the optional argument to \subfloat[]), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
-% Be aware that for subfig.sty to generate the (a), (b), etc., subfigure
-% labels, the optional argument to \subfloat must be present. If a
-% subcaption is not desired, just leave its contents blank,
-% e.g., \subfloat[].
-
-
-% An example of a floating table. Note that, for IEEE style tables, the
-% \caption command should come BEFORE the table and, given that table
-% captions serve much like titles, are usually capitalized except for words
-% such as a, an, and, as, at, but, by, for, in, nor, of, on, or, the, to
-% and up, which are usually not capitalized unless they are the first or
-% last word of the caption. Table text will default to \footnotesize as
-% the IEEE normally uses this smaller font for tables.
-% The \label must come after \caption as always.
-%
-%\begin{table}[!t]
-%% increase table row spacing, adjust to taste
-%\renewcommand{\arraystretch}{1.3}
-% if using array.sty, it might be a good idea to tweak the value of
-% \extrarowheight as needed to properly center the text within the cells
-%\caption{An Example of a Table}
-%\label{table_example}
-%\centering
-%% Some packages, such as MDW tools, offer better commands for making tables
-%% than the plain LaTeX2e tabular which is used here.
-%\begin{tabular}{|c||c|}
-%\hline
-%One & Two\\
-%\hline
-%Three & Four\\
-%\hline
-%\end{tabular}
-%\end{table}
-
-
-% Note that the IEEE does not put floats in the very first column
-% - or typically anywhere on the first page for that matter. Also,
-% in-text middle ("here") positioning is typically not used, but it
-% is allowed and encouraged for Computer Society conferences (but
-% not Computer Society journals). Most IEEE journals/conferences use
-% top floats exclusively. 
-% Note that, LaTeX2e, unlike IEEE journals/conferences, places
-% footnotes above bottom floats. This can be corrected via the
-% \fnbelowfloat command of the stfloats package.
+\section{Results and Discussion}
 
 
 
+\section{Conclusion and Future Work}
 
-\section{Conclusion}
-The conclusion goes here.
 
 
 
@@ -545,17 +421,13 @@ The conclusion goes here.
 
 
 % use section* for acknowledgment
-\ifCLASSOPTIONcompsoc
+%\ifCLASSOPTIONcompsoc
   % The Computer Society usually uses the plural form
-  \section*{Acknowledgments}
-\else
+  %\section*{Acknowledgments}
+%\else
   % regular IEEE prefers the singular form
-  \section*{Acknowledgment}
-\fi
-
-
-The authors would like to thank...
-
+  %\section*{Acknowledgment}
+%\fi
 
 
 
@@ -582,17 +454,8 @@ The authors would like to thank...
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
 % (used to reserve space for the reference number labels box)
-\begin{thebibliography}{1}
-
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
-
-\end{thebibliography}
-
-
-
-
+\bibliography{mybib}{}
+\bibliographystyle{plain}
 % that's all folks
 \end{document}
 
