--- a/IEEE Paper/mybib.bib
+++ b/IEEE Paper/mybib.bib
@@ -1,8 +1,3 @@
-@misc{ Nobody06,
-       author = "Nobody Jr",
-       title = "My Article",
-       year = "2006" }
-	   
 @INPROCEEDINGS{7873142,
 	author={M. Sultana and A. Haider and M. S. Uddin},
 	booktitle={2016 3rd International Conference on Electrical Engineering and Information Communication Technology (ICEEICT)},
@@ -22,3 +17,13 @@
 	keywords={Android (operating system);cardiology;data mining;diseases;medical computing;smart phones;Android based prototype software;IHD;abnormal cholesterol;cardiac event;clinical data mining;clinical 		symptom;diabetes;dyslipidemia;heart attack risk prediction;hypertension;obesity;smartphone based ischemic heart disease risk prediction;smoking;stress;Androids;Diabetes;Diseases;Heart;History;Sociology;Statistics;ACS;Android;Chi-square;Data Mining;Heart Disease;IHD;Prediction;Smartphone},
 	doi={10.1109/ICCITECHN.2016.7860213},
 	month={Dec},}
+	
+@INPROCEEDINGS{7808353,
+	author={R. S. B. Rosli and R. F. Olanrewaju},
+	booktitle={2016 International Conference on Computer and Communication Engineering (ICCCE)},
+	title={Mobile Heart Rate Detection System (MoHeRDS) for Early Warning of Potentially-Fatal Heart Diseases},
+	year={2016},
+	pages={422-427},
+	keywords={diseases;microcontrollers;patient monitoring;photoplethysmography;smart phones;telemedicine;MoHeRDS device;SMS interface;arduino microcontroller;continuous cardiac monitoring machine;device prototype;early 		potentially-fatal heart disease warning;heart attacks;heart failure;heart-rate alarming change;mobile heart rate detection system;photoplethysmography technique;pulse sensor module;short message service;Diseases;GSM;Heart rate;Hospitals;Monitoring;Receivers;Detection System;GSM;Heart Diseases;Heart Rate;Mobile;Photoplethysmography;SMS;Warning},
+	doi={10.1109/ICCCE.2016.95},
+	month={July},}
