--- a/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
+++ b/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
@@ -392,15 +392,19 @@ Cardiovascular disease (CVD) is part of a category of diseases involving the hea
 
 \section{Research Motivation}
 Nowadays there is a large focus in research in what is called Big Data Analytics (BDA). BDA is the process of analysing large amounts of data to find hidden patterns and meaning within. Examples of where BDA is making large improvements are the pharmaceutical industry where BDA is allowing researchers to focus on the medications that will be most likely to succeed and in the cases of disease and viral outbreaks where BDA is mapping out the genetic components that are able to stop the diseases from spreading. Our end goal for this research also focuses on the health industry but looks at creating a process for predicting cardiovascular disease in order to hopefully prevent it in the overall Canadian population. An example applicable to our domain follows:
-A person goes for a checkup at their family physician. At the checkup they are given a survey to fill out and are run through the usual set of tests. The results from the survey and the tests are then run through the clinical decision making process to determine problem areas of the invidual that put them at risk for CVD. Using the results, the individual can take that knowledge and change his lifestyle habits to decrease his likelyhood of CVD.
-This one example shows a possible usage for the research that will be gained here.
+\\
+\indent A person goes for a checkup at their family physician. At the checkup they are given a survey to fill out and are run through the usual set of tests. The results from the survey and the tests are then run through the clinical decision making process to determine problem areas of the invidual that put them at risk for CVD. Using the results, the individual can take that knowledge and change his lifestyle habits to decrease his likelyhood of CVD.
+\\
+\indent This one example shows a possible usage for the research that will be gained here.
 
 \section{Related Works}
-Research in cardiovascular health has steadily increased over the years as it has become more common in the healthcare fields. Advancements and usage of big data analytics has improved the methods and variety of research that can be conducted on the existing datasets\cite{Nobody06}. 
-
+Research in cardiovascular health has steadily increased over the years as it has become more common in the healthcare fields. Advancements and usage of big data analytics has improved the methods and variety of research that can be conducted on the existing datasets. 
+Looking at what was proposed by Sultana et al \cite{7873142}, they analyzed several different heart disease prediction techniques. Through their research they found that Bayes Net and SMO classifiers performed best among their initial five classifiers: Bayes Net, SMO, KStar, MLP and J48. To come up with this conclusion the five classifiers were tested against two sets of data, the UCI standard heart disease dataset as well as collected patient data from Bangladesh. Using the accuracy calculated from the True Positive Rate (TPR) and the False Positive Rate (FPR) as well as the AUC from the ROC curve, Bays Net and SMO were found to be the best of the classifiers tested.
+   Raihan et al \cite{7860213} proposes a smartphone application heart disease prediction system with data mining techniques. Their proposed system in theory is able to predict Ischemic Heart Disease from a smartphone interface. They suggested that main tools that have a mandatory input of lipid values make them underutilized by the population at large. While such tools are valuable they set out to make a system that is more user friendly to a non medical professional.
+   Rosli et al \cite{7808353} proposes another mobile detection system for heart disease but this time looking for early warning signs of fatal heart disease.
 \section{Data Description}
 
-\section{Methodology}
+\section{Methodology} 
 
 \section{Validation and Evaluation}
 
