--- a/IEEE Paper/mybib.bib
+++ b/IEEE Paper/mybib.bib
@@ -27,3 +27,8 @@
 	keywords={diseases;microcontrollers;patient monitoring;photoplethysmography;smart phones;telemedicine;MoHeRDS device;SMS interface;arduino microcontroller;continuous cardiac monitoring machine;device prototype;early 		potentially-fatal heart disease warning;heart attacks;heart failure;heart-rate alarming change;mobile heart rate detection system;photoplethysmography technique;pulse sensor module;short message service;Diseases;GSM;Heart rate;Hospitals;Monitoring;Receivers;Detection System;GSM;Heart Diseases;Heart Rate;Mobile;Photoplethysmography;SMS;Warning},
 	doi={10.1109/ICCCE.2016.95},
 	month={July},}
+
+@misc{StatlogHeart,
+	title = "{UCI} Machine Learning Repository",
+	url = "http://archive.ics.uci.edu/ml/datasets/Statlog+(Heart)",
+	institution = "University of California, Irvine, School of Information and Computer Sciences" }
