--- a/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
+++ b/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
@@ -394,7 +394,7 @@ In Canadian society, the ubiquity of heart disease has lead to it becoming the s
 \IEEEpeerreviewmaketitle
 
 \section{Introduction}
-Cardiovascular disease (CVD) is part of a category of diseases involving the heart and blood vessels that is now the \textit{second leading} cause of death in Canada. As a result of its increasing prevalence, large amounts of research is being conducted to try and bring down the instances of death and increase the health of Canadians from coast-to-coast. To accomplish our analysis, we will create a \textit{Bayesian Network} to model our clinical decision making process (CDMS). Afterwards, we evaluate our CDMS using a receiver operating characteristic (ROC) curve and determine the area under the curve (AUC).  
+Cardiovascular disease (CVD) is part of a category of diseases involving the heart and blood vessels that is now the \textit{second leading} cause of death in Canada \cite{StatsCan}. As a result of its increasing prevalence, large amounts of research is being conducted to try and bring down the instances of death and increase the health of Canadians from coast-to-coast. To accomplish our analysis, we will create a \textit{Bayesian Network} to model our clinical decision making process (CDMS). Afterwards, we evaluate our CDMS using a receiver operating characteristic (ROC) curve and determine the area under the curve (AUC).  
 
 \section{Research Motivation}
 Nowadays there is a large focus in research in what is called Big Data Analytics (BDA). BDA is the process of analysing large amounts of data to find hidden patterns and meaning within. Examples of where BDA is making large improvements are the pharmaceutical industry where BDA is allowing researchers to focus on the medications that will be most likely to succeed and in the cases of disease and viral outbreaks where BDA is mapping out the genetic components that are able to stop the diseases from spreading. Our end goal for this research also focuses on the health industry but looks at creating a process for predicting cardiovascular disease in order to hopefully prevent it in the overall Canadian population. An example applicable to our domain follows:
@@ -407,7 +407,7 @@ Nowadays there is a large focus in research in what is called Big Data Analytics
 Research in cardiovascular health has steadily increased over the years as it has become more common in the health care fields. Advancements and usage of big data analytics has improved the methods and variety of research that can be conducted on the existing datasets. 
 Looking at what was proposed by Sultana et al \cite{7873142}, they analyzed several different heart disease prediction techniques. Through their research they found that Bayes Net and SMO classifiers performed best among their initial five classifiers: Bayes Net, SMO, KStar, MLP and J48. To come up with this conclusion the five classifiers were tested against two sets of data, the UCI standard heart disease dataset as well as collected patient data from Bangladesh. Using the accuracy calculated from the True Positive Rate (TPR) and the False Positive Rate (FPR) as well as the AUC from the ROC curve, Bays Net and SMO were found to be the best of the classifiers tested.
    Raihan et al \cite{7860213} proposes a smartphone application heart disease prediction system with data mining techniques. Their proposed system in theory is able to predict Ischemic Heart Disease from a smartphone interface. They suggested that main tools that have a mandatory input of lipid values make them underutilized by the population at large. While such tools are valuable they set out to make a system that is more user friendly to a non medical professional.
-   Rosli et al \cite{7808353} proposes another mobile detection system for heart disease but this time looking for early warning signs of fatal heart disease.
+   Rosli et al \cite{7808353} proposes another mobile detection system for heart disease but this time looking for early warning signs of fatal heart disease. Their system also uses an Arduino micro-controller to measure the heart rate of the individual. Their system uses photoplethysmography technique and utilizes a GSM shield module to act as an SMS interface. In a survey to test the effectiveness of their system, 100\% of respondents agreed that their system is relevant for the industry.
 \section{Data Description}
 Our research focused on two datasets. We first examined a dataset as seen in Table \ref{table_statlogheart}. 
 \begin{table}[!ht]
