--- a/IEEE Paper/mybib.bib
+++ b/IEEE Paper/mybib.bib
@@ -29,6 +29,14 @@
 	month={July},}
 
 @misc{StatlogHeart,
-	title = "{UCI} Machine Learning Repository",
+	author = "{UCI} Machine Learning Repository",
+	title = "Heart Disease Data Set",
 	url = "http://archive.ics.uci.edu/ml/datasets/Statlog+(Heart)",
 	institution = "University of California, Irvine, School of Information and Computer Sciences" }
+	
+@misc{StatsCan,
+	author = {Statistics Canada},
+	title = {Table 102-0561 -  Leading causes of death, total population, by age group and sex, Canada, annual},
+	type = {CANSIM (database)},
+	year = {2013},
+	url = {http://www.statcan.gc.ca/pub/12-591-x/2009001/02-step-etape/ex/ex-census-recensement-eng.htm}}
