Conditional probability tables added, bayesian net

--- a/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
+++ b/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
@@ -158,6 +158,13 @@ Since the first dataset, Table \ref{table_statlogheart}, we looked at was too sm
 \label{fig_statloghealth}
 \end{figure}
 
+\begin{figure*}[!ht]
+\centering
+\includegraphics[width=\textwidth]{bn_heartsurvey.pdf}
+\caption{Directed Bayesian Network Using Heart Survey}
+\label{fig_heartsurvey}
+\end{figure*}
+
 \section{Conclusion and Future Work}
 
 \bibliography{mybib}{}
