--- a/IEEE Paper/mybib.bib
+++ b/IEEE Paper/mybib.bib
@@ -27,6 +27,16 @@
 	keywords={diseases;microcontrollers;patient monitoring;photoplethysmography;smart phones;telemedicine;MoHeRDS device;SMS interface;arduino microcontroller;continuous cardiac monitoring machine;device prototype;early 		potentially-fatal heart disease warning;heart attacks;heart failure;heart-rate alarming change;mobile heart rate detection system;photoplethysmography technique;pulse sensor module;short message service;Diseases;GSM;Heart rate;Hospitals;Monitoring;Receivers;Detection System;GSM;Heart Diseases;Heart Rate;Mobile;Photoplethysmography;SMS;Warning},
 	doi={10.1109/ICCCE.2016.95},
 	month={July},}
+	
+@INPROCEEDINGS{7849886,
+	author={D. LaFreniere and F. Zulkernine and D. Barber and K. Martin},
+	booktitle={2016 IEEE Symposium Series on Computational Intelligence (SSCI)},
+	title={Using machine learning to predict hypertension from a clinical dataset},
+	year={2016},
+	pages={1-7},
+	keywords={learning (artificial intelligence);medical computing;neural nets;CPCSSN data set;Canadian Primary Care Sentinel Surveillance Network;artificial neural network;clinical dataset;coronary artery disease;demographics;early warning system;health conditions;heart failure;heart muscle;human error;hypertension;illness;life threatening diseases;machine learning;medical records;neural network model;probability;risk factors;susceptible populations;Blood pressure;Diseases;Hypertension;Mathematical model;Medical diagnostic imaging;Neural networks;Predictive models;Artificial neural network;backpropagation network;hypertension;medical decision support systems},
+	doi={10.1109/SSCI.2016.7849886},
+	month={Dec},}
 
 @misc{StatlogHeart,
 	author = "{UCI} Machine Learning Repository",
@@ -40,3 +50,19 @@
 	type = {CANSIM (database)},
 	year = {2013},
 	url = {http://www.statcan.gc.ca/pub/12-591-x/2009001/02-step-etape/ex/ex-census-recensement-eng.htm}}
+	
+@misc{HealthSurvey,
+	author = {Canadian Heart Health Database Centre},
+	title = {Canadian Heart Health Survey},
+	doi = {10.7939/DVN/10591UNF:5:iB2LfjdYTgmMmn0PjSao5g==},
+	year = {1997}
+}
+
+
+
+
+
+
+
+
+
