--- a/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
+++ b/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
@@ -67,7 +67,7 @@ pgosial@lakeheadu.ca, kakauran@lakeheadu.ca}}
 \maketitle
 
 \begin{abstract}
-In Canadian society, the ubiquity of heart disease has lead to it becoming the second leading cause of death for Canadians. In this paper, we look at creating a clinical decision making process to identify the risk factors associated with a diagnoses of heart disease. With this research we may be able to increase the
+In Canadian society, the ubiquity of cardiovascular disease has led to it becoming the second leading cause of death for Canadians. In this paper, we examine the process of creating a clinical decision support system using a Bayesian Network to model and identify the risk factors associated with a diagnosis of cardiovascular disease. With this research, we hope to increase the preventative techniques available to Canadian citizens and provide a better quality of life for all.
 \end{abstract}
 
 \IEEEpeerreviewmaketitle
@@ -94,7 +94,7 @@ This dataset also features no missing values, contains 270 patient instances wit
 
 \begin{table}[!ht]
 \begin{center} 
-\caption{Statlog Heart Data Set \cite{StatlogHeart}}
+\caption{Statlog Heart Dataset \cite{StatlogHeart}}
 \begin{tabular}{ |P{0.3cm}|P{4.0cm}|P{1.4cm}|P{1.4cm}|}
 \hline
 \#	&	Attribute										& Abbreviation & Data Type\\
@@ -126,6 +126,32 @@ This dataset also features no missing values, contains 270 patient instances wit
  13 	&	Thal: 3 = Normal; 6 = Fixed Defect; 7 = Reversible Defect 			& thal & Categorical\\
  \hline
  14 	&	Heart Disease Absent (1) or Present (2) 					& hdap & Categorical\\
+ \hline
+\end{tabular}
+\label{table_statlogheart}
+\end{center}
+\end{table}
+
+\begin{table}[!ht]
+\begin{center} 
+\caption{Heart Survey Dataset \cite{}}
+\begin{tabular}{ |P{0.3cm}|P{4.0cm}|P{1.4cm}|}
+\hline
+\#	&	Attribute										& Abbreviation\\
+\hline
+1	&	Age Grouped in 10 Year Segments											& gpage2\\
+ \hline
+2 	&	Sex											& sex\\
+\hline
+3	&	BMI Categories							& bmicat\\
+\hline
+\multicolumn{1}{|c|}{\vdots} 	&	\multicolumn{1}{c|}{\vdots} 	& \multicolumn{1}{c|}{\vdots}\\
+\hline
+35 	&	Other Heart Disease							& othhd\\
+ \hline
+36	&	Ever Had a Heart Attack?								& everha\\
+ \hline
+37 	&	Ever Had a Stroke?								& everstr\\
  \hline
 \end{tabular}
 \label{table_statlogheart}
