small fixes to paper

--- a/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
+++ b/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
@@ -67,19 +67,19 @@ pgosial@lakeheadu.ca, kakauran@lakeheadu.ca}}
 \maketitle
 
 \begin{abstract}
-In Canadian society, the ubiquity of cardiovascular disease has led to it becoming the second leading cause of death for Canadians. In this paper, we examine the process of creating a clinical decision support system using a Bayesian Network to model and identify the risk factors associated with a diagnosis of cardiovascular disease. With this research, we hope to increase the preventative techniques available to Canadian citizens and provide a better quality of life for all.
+In Canadian society, the ubiquity of cardiovascular disease has led to it becoming the second leading cause of death for Canadians. In this paper, we examine the process of creating a clinical decision support system (CDSS) using a Bayesian Network to model and identify the risk factors associated with a diagnosis of cardiovascular disease. With this research, we hope to increase the preventative techniques available to Canadian citizens and provide a better quality of life for all.
 \end{abstract}
 
 \IEEEpeerreviewmaketitle
 
 \section{Introduction}
-Cardiovascular disease (CVD) is part of a category of diseases involving the heart and blood vessels that is now the \textit{second leading} cause of death in Canada \cite{StatsCan}. As a result of its increasing prevalence, large amounts of research is being conducted to try and bring down the instances of death and increase the health of Canadians from coast-to-coast. To accomplish our analysis, we will create a \textit{Bayesian Network} to model our clinical decision making process (CDMS). Afterwards, we evaluate our CDMS using a receiver operating characteristic (ROC) curve and determine the area under the curve (AUC).  
+Cardiovascular disease (CVD) is part of a category of diseases involving the heart and blood vessels that is now the \textit{second leading} cause of death in Canada \cite{StatsCan}. As a result of its increasing prevalence, large amounts of research is being conducted to try and bring down the instances of death and increase the health of Canadians from coast-to-coast. To accomplish our analysis, we will create a \textit{Bayesian Network} to model our CDSS. Afterwards, we evaluate our CDSS using a receiver operating characteristic (ROC) curve and determine the area under the curve (AUC).  
 \subsection{Defining Datasets}
 
 \section{Research Motivation}
-Nowadays there is a large focus in research in what is called Big Data Analytics (BDA). BDA is the process of analyzing large amounts of data to find hidden patterns and meaning within. Examples of where BDA is making large improvements are the pharmaceutical industry where BDA is allowing researchers to focus on the medications that will be most likely to succeed and in the cases of disease and viral outbreaks where BDA is mapping out the genetic components that are able to stop the diseases from spreading. Our end goal for this research also focuses on the health industry but looks at creating a process for predicting cardiovascular disease in order to hopefully prevent it in the overall Canadian population. An example applicable to our domain follows:
+Nowadays there is a large focus in research in what is called Big Data Analytics (BDA). BDA is the process of analyzing large amounts of data to find hidden patterns and meaning within. Examples of where BDA is making large improvements are the pharmaceutical industry where BDA is allowing researchers to focus on the medications that will be most likely to succeed and in the cases of disease and viral outbreaks where BDA is mapping out the genetic components that are able to stop the diseases from spreading. Our end goal for this research also focuses on the health industry but looks at creating a process for predicting CVD in order to hopefully prevent it in the overall Canadian population. An example applicable to our domain follows:
 \\
-\indent A person goes for a checkup at their family physician. At the checkup they are given a survey to fill out and are run through the usual set of tests. The results from the survey and the tests are then run through the clinical decision making process to determine problem areas of the individual that put them at risk for CVD. Using the results, the individual can take that knowledge and change his lifestyle habits to decrease his likelihood of CVD.
+\indent A person goes for a checkup at their family physician. At the checkup they are given a survey to fill out and are run through the usual set of tests. The results from the survey and the tests are then run through the CDSS to determine problem areas of the individual that put them at risk for CVD. Using the results, the individual can take that knowledge and change their lifestyle habits to decrease the likelihood of CVD.
 \\
 \indent This one example shows a possible usage for the research that will be gained here.
 
@@ -91,7 +91,7 @@ Looking at what was proposed by Sultana et al \cite{7873142}, they analyzed seve
 \section{Data Description}
 Our research focused on two datasets. We first examined the standard statlog heart disease dataset from UCI machine learning repository \cite{StatlogHeart}.  The data attributes can be seen in Table \ref{table_statlogheart}.  The data contains multivariate characteristics consisting of both numerical and categorical data types.
 This dataset also features no missing values, contains 270 rows with 14 attributes, and its primary purpose is to be used for prediction of heart disease by using the first 13 attributes as predictors of the 14\textsuperscript{th} attribute.
-Our second dataset consisted of a subset of the Canadian Heart Health Survey Dataverse \cite{HealthSurvey}. The dataset produced in 1997 contains the data from ten Heart Health Surveys conducted between 1986 and 1992 in Canada. The dataset is also much more extensive than our starting set containing 23129 rows and 266 attributes of which we only used a smaller subset to produce our clinical decision support (CDS) model.
+Our second dataset consisted of a subset of the Canadian Heart Health Survey Dataverse \cite{HealthSurvey}. The dataset produced in 1997 contains the data from ten Heart Health Surveys conducted between 1986 and 1992 in Canada. The dataset is also much more extensive than our starting set containing 23129 rows and 266 attributes of which we only used a smaller subset to produce our CDSS model.
 Our smaller subset consisted of examining only 37 attributes and a snapshot of some of the attributes examined can be seen in Table \ref{table_heartsurvey}.
 
 \begin{table}[!ht]
@@ -215,7 +215,7 @@ We were also able to discover that the lowest probability for heart disease foll
 \begin{table}[!ht]
 \begin{center} 
 \caption{Lowest Heart Disease Probability (0.063\%)}
-\begin{tabular}{|P{1.4cm}|P{5.0cm}|}
+\begin{tabular}{|P{1.4cm}|P{4.0cm}|}
 \hline 
 Abbreviation & Value \\
 \hline
@@ -239,7 +239,7 @@ thal & Normal\\
 \end{table}
 
 
-For our second dataset we created the network seen in Fig. \ref{fig_heartsurvey}. This Baysian network contains 37 nodes and 75 arcs with all of them being of the directed variety. The markov blanket size which indicates the number parents, children and parents of the children of the node was 5.19. 
+For our second dataset we created the network seen in Fig. \ref{fig_heartsurvey}. This Bayesian network contains 37 nodes and 75 arcs with all of them being of the directed variety. The markov blanket size which indicates the number parents, children and parents of the children of the node was 5.19. 
 
 \begin{figure}[!ht]
 \centering
