--- a/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
+++ b/IEEE Paper/CDS Cardiovascular Health Prediction with Bayesian Network.tex
@@ -73,8 +73,7 @@ In Canadian society, the ubiquity of cardiovascular disease has led to it becomi
 \IEEEpeerreviewmaketitle
 
 \section{Introduction}
-Cardiovascular disease (CVD) is part of a category of diseases involving the heart and blood vessels that is now the \textit{second leading} cause of death in Canada \cite{StatsCan}. As a result of its increasing prevalence, large amounts of research is being conducted to try and bring down the instances of death and increase the health of Canadians from coast-to-coast. To accomplish our analysis, we will create a \textit{Bayesian Network} to model our CDSS. Afterwards, we evaluate our CDSS using a receiver operating characteristic (ROC) curve and determine the area under the curve (AUC).  
-\subsection{Defining Datasets}
+Cardiovascular disease (CVD) is part of a category of diseases involving the heart and blood vessels that is now the \textit{second leading} cause of death in Canada \cite{StatsCan}. As a result of its increasing prevalence, large amounts of research is being conducted to try and bring down the instances of death and increase the health of Canadians from coast-to-coast. To accomplish our analysis, we will create a \textit{Bayesian Network} (BN) to model our CDSS. Afterwards, we evaluate our CDSS using a receiver operating characteristic (ROC) curve and determine the area under the curve (AUC).  
 
 \section{Research Motivation}
 Nowadays there is a large focus in research in what is called Big Data Analytics (BDA). BDA is the process of analyzing large amounts of data to find hidden patterns and meaning within. Examples of where BDA is making large improvements are the pharmaceutical industry where BDA is allowing researchers to focus on the medications that will be most likely to succeed and in the cases of disease and viral outbreaks where BDA is mapping out the genetic components that are able to stop the diseases from spreading. Our end goal for this research also focuses on the health industry but looks at creating a process for predicting CVD in order to hopefully prevent it in the overall Canadian population. An example applicable to our domain follows:
@@ -92,7 +91,7 @@ Looking at what was proposed by Sultana et al \cite{7873142}, they analyzed seve
 Our research focused on two datasets. We first examined the standard statlog heart disease dataset from UCI machine learning repository \cite{StatlogHeart}.  The data attributes can be seen in Table \ref{table_statlogheart}.  The data contains multivariate characteristics consisting of both numerical and categorical data types.
 This dataset also features no missing values, contains 270 rows with 14 attributes, and its primary purpose is to be used for prediction of heart disease by using the first 13 attributes as predictors of the 14\textsuperscript{th} attribute.
 Our second dataset consisted of a subset of the Canadian Heart Health Survey Dataverse \cite{HealthSurvey}. The dataset produced in 1997 contains the data from ten Heart Health Surveys conducted between 1986 and 1992 in Canada. The dataset is also much more extensive than our starting set containing 23129 rows and 266 attributes of which we only used a smaller subset to produce our CDSS model.
-Our smaller subset consisted of examining only 37 attributes and a snapshot of some of the attributes examined can be seen in Table \ref{table_heartsurvey}.
+Our smaller subset consisted of examining only 20 attributes and a snapshot of some of the attributes examined can be seen in Table \ref{table_heartsurvey}.
 
 \begin{table}[!ht]
 \begin{center} 
@@ -149,11 +148,11 @@ Our smaller subset consisted of examining only 37 attributes and a snapshot of s
 \hline
 \multicolumn{1}{|c|}{\vdots} 	&	\multicolumn{1}{c|}{\vdots} 	& \multicolumn{1}{c|}{\vdots}\\
 \hline
-35 	&	Other Heart Disease								& othhd\\
+18 	&	Other Heart Disease								& othhd\\
  \hline
-36	&	Ever Had a Heart Attack?							& everha\\
+19	&	Ever Had a Heart Attack?							& everha\\
  \hline
-37 	&	Ever Had a Stroke?								& everstr\\
+20 	&	Ever Had a Stroke?								& everstr\\
  \hline
 \end{tabular}
 \label{table_heartsurvey}
@@ -163,18 +162,18 @@ Our smaller subset consisted of examining only 37 attributes and a snapshot of s
 \section{Methodology} 
 For the first dataset, Table \ref{table_statlogheart}, we simplified our analysis by only using data that was already categorical since categorizing the numerical data could be considered subjective.
 The main attributes we considered were sex, thal, hdap, cpt, recg, eia, sop, and fbs.
-First, we created an undirected Bayesian Network as seen in Fig. \ref{fig_statloghealth_undirected}. 
+First, we created an undirected BN as seen in Fig. \ref{fig_statloghealth_undirected}. 
 We quickly realized that this would of no use to us because we cannot see the direct dependencies between attributes.
-This led us to creating a directed Bayesian Network as seen in Fig. \ref{fig_statloghealth}.
-The Bayesian Network we created uses the \textit{Hill Climbing} approach to ensure in a completely directed network.
-From this directed Bayesian Network, Fig. \ref{fig_statloghealth}, we are able to see how certain attributes depend upon each other.
+This led us to creating a directed BN as seen in Fig. \ref{fig_statloghealth}.
+The BN we created uses the \textit{Hill Climbing} approach to ensure in a completely directed network.
+From this directed BN, Fig. \ref{fig_statloghealth}, we are able to see how certain attributes depend upon each other.
 Since the first dataset, Table \ref{table_statlogheart}, was too small, we looked at another dataset and took a subset of the data, Table \ref{table_heartsurvey}, to perform further analysis.
 This dataset comprised mainly of categorical data so it allowed us to have a large amount of data even after omitting numerical data.
 
 \section{Results and Discussion}
-In this section, we discuss the results of our constructed Bayesian Networks as well as our ROC curve.
+In this section, we discuss the results of our constructed BNs as well as our ROC curve.
 \subsection*{Table \ref{table_statlogheart}: Undirected Bayesian Network}
-Using the undirected Bayesian Network as seen in Fig. \ref{fig_statloghealth_undirected}, we were able to run tests against this model and determine the highest and lowest factors for heart disease.
+Using the undirected BN as seen in Fig. \ref{fig_statloghealth_undirected}, we were able to run tests against this model and determine the highest and lowest factors for heart disease.
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=\columnwidth]{bn_statloghealth_undirected}
@@ -239,8 +238,8 @@ thal & Normal\\
 \end{table}
 
 
-For our second dataset we created the network seen in Fig. \ref{fig_heartsurvey}. This Bayesian network contains 37 nodes and 75 arcs with all of them being of the directed variety. The markov blanket size which indicates the number parents, children and parents of the children of the node was 5.19. 
-
+\subsection*{Table \ref{table_statlogheart}: Directed Bayesian Network}
+We create a directed BN so we can observe direct dependence upon nodes.
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=\columnwidth]{bn_statloghealth}
@@ -249,10 +248,14 @@ For our second dataset we created the network seen in Fig. \ref{fig_heartsurvey}
 \end{figure}
 
 
+\subsection*{Table \ref{table_heartsurvey}: Directed Bayesian Network}
+
+For our second dataset we created the network seen in Fig. \ref{fig_heartsurvey}. This BN contains 20 nodes and 46 arcs with all of them being of the directed variety. The markov blanket size which indicates the number parents, children and parents of the children of the node was 5.50. 
+
 \begin{figure*}[!ht]
 \centering
 \includegraphics[width=\textwidth]{bn_heartsurvey.pdf}
-\caption{Directed Bayesian Network Using Heart Survey}
+\caption{Directed Bayesian Network Using Table \ref{table_heartsurvey} Dataset}
 \label{fig_heartsurvey}
 \end{figure*}
 
